k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quasar-fire-ingress
  namespace: quasar-fire
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: quasar.local
      http:
        paths:
          - path: /quasar/fire/Api/v1
            pathType: Prefix
            backend:
              service:
                name: position-consumer
                port:
                  number: 8080
          - path: /api/tracker/v1
            pathType: Prefix
            backend:
              service:
                name: satellite-tracker
                port:
                  number: 8081
          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
          - path: /prometheus
            pathType: Prefix
            backend:
              service:
                name: prometheus
                port:
                  number: 9090
